# dev-container-template

./: .dockerignore.jinja  .pre-commit-config.yaml.jinja  CLAUDE.md.jinja  Dockerfile.production.jinja  README.md  README.md.jinja  compose.yml.jinja  copier.yml  pyproject.toml.jinja
.devcontainer/: Dockerfile.jinja  devcontainer.json.jinja  ssh-setup.sh.jinja
src/{{ project_name.replace('-', '_') }}/: main.py.jinja
test-project/: .gitignore  CLAUDE.md  Dockerfile.production  README.md  pyproject.toml
test-project/.devcontainer/: Dockerfile  devcontainer.json
test-project/src/test_claude_code/: __init__.py  main.py
test-project/tests/: __init__.py  test_main.py
tests/: test_main.py.jinja
